--- a/wiki/TelluriumResources.wiki
+++ b/wiki/TelluriumResources.wiki
@@ -20,7 +20,7 @@
   * 张凯峰代表InfoQ China对Tellurium创始人方剑博士的采访: [http://www.infoq.com/cn/articles/tellurium-testing-framework 开源自动测试框架Tellurium]
 
 == 演示类 ==
-
+  * [http://telluriumdoc.googlecode.com/files/Tellurium.zip Tellurium在CodeStock 2009的演讲幻灯片和演示代码]
   * [http://code.google.com/p/aost/downloads/list Tellurium演示] (在线版 [http://video.google.com/videoplay?docid=-7547683963743870970 Part I] [http://video.google.com/videoplay?docid=2145192284694104042 Part II])
   * [http://www.slideshare.net/John.Jian.Fang/telluriumanewapproachforwebtesting 在线幻灯片: Tellurium - A New Approach For Web Testing]
   * [http://www.slideshare.net/John.Jian.Fang/ten-minutes-to-tellurium 在线幻灯片: 10 Minutes to Tellurium] 
